@@ -25,6 +25,7 @@ struct highLightingRule
 {
 	QRegularExpression	pattern;
 	QTextCharFormat		format;
+	bool					clearFirst=false;
 };
 
 struct themeStruct
@@ -39,6 +40,7 @@ struct themeStruct
 enum {FUNCTIONTHEME=0,CLASSTHEME,TYPETHEME,COMMENTTHEME,QUOTESTHEME,INCLUDETHEME,NUMBERTHEME,KEYWORDTHEME,CUSTOMTHEME,LANGUAGEEXTRAS,VARIABLETHEME,TOOLKITTHEME,THEMEDONE};
 
 #endif
+
 
 
 
